#noinst_LIBRARIES             = libsqlite3_helper.a
lib_LTLIBRARIES              = libsqlite3_helper.la
libsqlite3_helper_la_SOURCES  = Database.cpp Table.cpp Model.cpp
libsqlite3_helper_la_CPPFLAGS = -std=c++11 -I. -fPIC -g -O0
libsqlite3_helper_la_CXXFLAGS = -std=c++11 -I. -fPIC -g -O0
libsqlite3_helper_la_LDFLAGS  = -shared -fPIC -g -O0
